@@ -1,3 +1,9 @@
+Thu Feb 17 13:57:55 UTC 2011  Byron Harris  <harrisb@ociweb.com>
+
+        * tools/modeling/plugins/org.opendds.modeling.diagram.main/src/org/opendds/modeling/diagram/main/part/OpenDDSCreationWizard.java:
+
+          Have wizard page icon point to OpenDDS icon in common.
+
 Wed Feb 16 22:46:17 UTC 2011  Adam Mitz  <mitza@ociweb.com>
 
         * tools/modeling/features/org.opendds.modeling.site/README.txt:
